@@ -1,7 +1,7 @@
 /* SLiM - Simple Login Manager
    Copyright (C) 1997, 1998 Per Liden
-   Copyright (C) 2004-05 Simone Rota <sip@varlock.com>
-   Copyright (C) 2004-05 Johannes Winkelmann <jw@tks6.net>
+   Copyright (C) 2004-06 Simone Rota <sip@varlock.com>
+   Copyright (C) 2004-06 Johannes Winkelmann <jw@tks6.net>
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -166,6 +166,10 @@ void App::Run() {
 
 #ifndef XNEST_DEBUG
         OpenLog();
+		
+		if (cfg.getOption("daemon") == "yes") {
+			daemonmode = true;
+		}
 
         // Daemonize
         if (daemonmode) {
